Updated rpi link

--- a/README
+++ b/README
@@ -160,7 +160,7 @@ Installation Steps:
 
 Getting further help:
 =====================
-A demonstration Raspberry Pi IPv6 firewall checker is available to IPv6 enabled clients at: http://pi.ipv6.chappell-family.co.uk
+A demonstration Raspberry Pi IPv6 firewall checker is available to IPv6 enabled clients at: http://www6.chappell-family.co.uk
 
 If you need further help then please email me at: webmaster@chappell-family.com or visit my IPscan wiki at:
  
