--- a/README
+++ b/README
@@ -112,6 +112,14 @@ versions 0.90 and later. See step 4 below for details.
           Allow from 2000::/3
        </Directory>
     
+       Also disable client caching, having enabled the loading of mod_headers:
+
+       <IfModule mod_headers.c>
+        Header set Cache-Control "private, no-cache, no-store, must-revalidate"
+        Header set Pragma "no-cache"
+        Header set Expires "0"
+       </IfModule>
+
        Don't forget to restart your web server after making the appropriate modifications.
     
     7. If you are using an SELinux-enabled distribution (e.g. Fedora) then it may be necessary to perform additional 
@@ -166,11 +174,11 @@ versions 0.90 and later. See step 4 below for details.
 
 Getting further help:
 =====================
-A demonstration Raspberry Pi IPv6 firewall checker is available to IPv6 enabled clients at: https://www6.chappell-family.co.uk
+A demonstration Raspberry Pi IPv6 firewall checker is available to IPv6 enabled clients at: https://ipv6.chappell-family.com/ipv6tcptest/
 
 If you need further help then please email me at: webmaster@chappell-family.com or visit my IPscan wiki at:
  
-https://ipv6.chappell-family.com/timswiki/index.php5?title=IPv6
+https://wiki.chappell-family.com/wiki/index.php?title=IPv6
 
 ---
 Coverity results can be found at: https://scan.coverity.com/projects/timsgit-ipscan
