Add lgtm.com code quality badge.

--- a/README
+++ b/README
@@ -180,4 +180,5 @@ If you need further help then please email me at: webmaster@chappell-family.com 
  
 https://wiki.chappell-family.com/wiki/index.php?title=IPv6
 
+[![Language grade: C/C++](https://img.shields.io/lgtm/grade/cpp/g/timsgit/ipscan.svg?logo=lgtm&logoWidth=18)](https://lgtm.com/projects/g/timsgit/ipscan/context:cpp)
 ---
